--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,11 @@ flutter:
 
   assets:
     - assets/images/principal.png
-    - assets/images/button.png
     - assets/images/casa.png
     - assets/images/igreja.png
     - assets/images/escola.png
     - assets/images/park.png
+    - assets/images/personagem.png
 
   fonts:
     - family: LuckiestGuy
